# Job-Role-Scripts

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  PORTFOLIO_PLAN.md  PSScriptAnalyzerSettings.psd1  README.md  pyproject.toml
.github/workflows/: powershell.yml  python.yml
Compliance/: README.md
Compliance/BaselineAudit/Test-CISBenchmark/: README.md  Test-CISBenchmark.Tests.ps1  Test-CISBenchmark.ps1
Compliance/BaselineAudit/Test-STIGCompliance/: README.md  Test-STIGCompliance.Tests.ps1  Test-STIGCompliance.ps1
Compliance/Inventory/Get-BitLockerStatus/: Get-BitLockerStatus.Tests.ps1  Get-BitLockerStatus.ps1  README.md
Compliance/Inventory/Get-SoftwareInventoryCVE/: README.md  get_software_inventory_cve.py  test_get_software_inventory_cve.py
Compliance/PolicyAudit/Get-AuditPolicy/: Get-AuditPolicy.Tests.ps1  Get-AuditPolicy.ps1  README.md
Compliance/PolicyAudit/Get-LoggingCoverage/: Get-LoggingCoverage.Tests.ps1  Get-LoggingCoverage.ps1  README.md
Compliance/PolicyAudit/Get-PasswordPolicy/: Get-PasswordPolicy.Tests.ps1  (+2 more)
SecurityAnalyst/: README.md
SecurityAnalyst/Discovery/: README.md
SecurityAnalyst/Execution/: README.md
SecurityAnalyst/InitialAccess/: README.md
SecurityAnalyst/LateralMovement/: README.md
SecurityAnalyst/Persistence/: README.md
SecurityAnalyst/Triage/: README.md
SecurityAnalyst/_SHARED/Python/: pyproject.toml
SecurityAnalyst/_SHARED/Python/sa_common/: __init__.py  io.py  log.py
SecurityAnalyst/_SHARED/Python/tests/: test_io.py
SecurityAnalyst/_Tooling/: README.md
SecurityAnalyst/_Tooling/Get-IOCIntel/: README.md  conftest.py  get_ioc_intel.py  pyproject.toml  test_get_ioc_intel.py
SecurityAnalyst/_Tooling/Get-IOCIntel/docs/: attack-mapping.md
SecurityAnalyst/_Tooling/Invoke-PhishTriage/: README.md  conftest.py  phish_triage.py  pyproject.toml  test_phish_triage.py
SecurityAnalyst/_Tooling/Invoke-PhishTriage/docs/: attack-mapping.md
SecurityAnalyst/_Tooling/Invoke-PhishTriage/samples/: clean.eml  spoofed.eml
SysAdmin/: README.md
(+112 files in other folders)
