[project]
name = "usefulscripts-workspace"
version = "0.1.0"
description = "Workspace-level config for Python scripts in UsefulScripts portfolio"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["SecurityAnalyst"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-q --strict-markers"
